--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@
             <h6>Send Message</h6>
             <div class="contact">
 <!-- Do not change the code! -->
-<a id="foxyform_embed_link_968489" href="http://www.foxyform.com/"></a>
+<a id="foxyform_embed_link_968489" href="http://www.foxyform.com/">good</a>
 <script type="text/javascript">
 (function(d, t){
    var g = d.createElement(t),
