--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
    
    
 <!-- Do not change the code! -->
-<a id="foxyform_embed_link_968472" href="http://www.foxyform.com/"></a>
+<a id="foxyform_embed_link_968472" href="http://www.foxyform.com/">good</a>
 <script type="text/javascript">
 (function(d, t){
    var g = d.createElement(t),
@@ -92,8 +92,7 @@
 
 
 
-</div>
-</div>
+
 
 
 
