--- a/contact.html
+++ b/contact.html
@@ -73,17 +73,15 @@
 
    
    
-<!-- Do not change the code! -->
-<a id="foxyform_embed_link_968472" href="http://www.foxyform.com/">good</a>
-<script type="text/javascript">
-(function(d, t){
-   var g = d.createElement(t),
-       s = d.getElementsByTagName(t)[0];
-   g.src = "http://www.foxyform.com/js.php?id=968472&sec_hash=94eb2088f73&width=350px";
-   s.parentNode.insertBefore(g, s);
-}(document, "script"));
-</script>
-<!-- Do not change the code! -->
+   <div class="main">
+        <div class="info">Give Your Feedback</div>
+        <form action="#"method="post" name="form" class="form-box">
+            <label for="name">Name</label><br>
+            <input type="text"name="name" class="inp" placeholder="Enter Your Name"required><br>
+
+        </form>
+
+    </div>
       
     
 
