--- a/contact.html
+++ b/contact.html
@@ -73,12 +73,18 @@
 
    
    
-   <div class="main">
+  <div class="main">
         <div class="info">Give Your Feedback</div>
-        <form action="#"method="post" name="form" class="form-box">
+        <form action="mail_handler.php"method="post" name="form" class="form-box">
             <label for="name">Name</label><br>
             <input type="text"name="name" class="inp" placeholder="Enter Your Name"required><br>
-
+            <label for="email"Email ID></label><br>
+            <input type="email"name="email" class="inp" placeholder="Enter Your Email" required><br>
+            <label for="phone"Phone></label><br>
+            <input type="phone"name="phone" class="inp" placeholder="Enter Your Phone" required><br>
+            <label for="message">message</label><br>
+            <textarea name="msg" class="msg-box" placeholder="Enter Your Message Here..." required></textarea><br>
+            <input type="submit" name="submit" value="Send" class="sub-btn">
         </form>
 
     </div>
