--- a/about.html
+++ b/about.html
@@ -173,12 +173,12 @@
             <h6>Send Message</h6>
             <div class="contact">
 <!-- Do not change the code! -->
-<a id="foxyform_embed_link_968489" href="http://www.foxyform.com/">good</a>
+<a id="foxyform_embed_link_968732" href="http://www.foxyform.com/">foxyform</a>
 <script type="text/javascript">
 (function(d, t){
    var g = d.createElement(t),
        s = d.getElementsByTagName(t)[0];
-   g.src = "http://www.foxyform.com/js.php?id=968489&sec_hash=c3e37fa04e8&width=350px";
+   g.src = "http://www.foxyform.com/js.php?id=968732&sec_hash=da72fdf4385&width=350px";
    s.parentNode.insertBefore(g, s);
 }(document, "script"));
 </script>
