--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
    
 	<div class="main">
 		<div class="info">Give Your Feedback!</div>
-		<form action="mail_handler.php" method="post" name="form" class="form-box">
+		<form action="mail_handler.php" method="GET" name="form" class="form-box">
 			<label for="name">Name</label><br>
 			<input type="text" name="name" class="inp" placeholder="Enter Your Name" required><br>
 			<label for="email">Email ID</label><br>
