--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
                   </div>
 
                   <div class="nav-link-wrapper">
-                    <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>  About</a> </li>
+                    <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>  About us</a> </li>
 
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <li><a href="services.html"><i class="fa fa-clone" aria-hidden="true"></i> Services</a></li>
+                    <li><a href="services.html"><i class="fa fa-clone" aria-hidden="true"></i> Our Services</a></li>
 
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <li><a href="contact.html"><i class="fa fa-phone" aria-hidden="true"> </i> Contact</a></li>
+                    <li><a href="contact.html"><i class="fa fa-phone" aria-hidden="true"> </i> Contact us</a></li>
 
                 </div>
 
