--- a/contact.html
+++ b/contact.html
@@ -20,23 +20,23 @@
                 <ul class="show-desktop hide-mobile" id="nav-wrapper">
                   <li id="exit" class="exit-btn hide-desktop"><img src="images/exit.svg" alt="exit menu"></li>
                     <div class="nav-link-wrapper">
-                        <li><a href="index.html"> <i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                        <li><a href="index.html"> <i class="fa fa-home" aria-hidden="true"> </i> Home</a></li>
                           
   
                     </div>
   
                     <div class="nav-link-wrapper">
-                      <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>  About</a> </li>
+                      <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"> </i>  About us</a> </li>
   
                   </div>
   
                   <div class="nav-link-wrapper">
-                      <li><a href="services.html"><i class="fa fa-clone" aria-hidden="true"></i> Services</a></li>
+                      <li><a href="services.html"><i class="fa fa-clone" aria-hidden="true"> </i> Our Services</a></li>
   
                   </div>
   
                   <div class="nav-link-wrapper">
-                      <li><a href="contact.html"><i class="fa fa-phone" aria-hidden="true"> </i> Contact</a></li>
+                      <li><a href="contact.html"><i class="fa fa-phone" aria-hidden="true"> </i> Contact us</a></li>
   
                   </div>
   
